Fix some layout issues

--- a/app/src/style.sass
+++ b/app/src/style.sass
@@ -16,8 +16,12 @@
   background-color: $background
   color: $white
 
+.sidebar
+  flex: 0 0 auto
+
 .route-container
-  flex-grow: 1
+  flex: 1 1 0
+  min-width: 0
   position: relative
   z-index: 200
   height: 100%
